# MonimoringAgentDiplom

./: .gitignore  CMakeLists.txt  conanfile.py  options.json
common/: collecting_metrics.h  core_content.h  encoding_helper.cpp  encoding_helper.h  event_queue.hpp  metrics_qulity_options.h  monitoring_data_structures.h  monitoring_event.h  monitoring_options.h  windows_service_data.h
common/event_queue/: event_queue.hpp  monitoring_event.h
core/: CMakeLists.txt  interface_factory.cpp  interface_factory.h
core/impl/: core_impl.cpp  core_impl.h  event_controller_impl.cpp  event_controller_impl.h  monitoring_subsystem_impl.cpp  monitoring_subsystem_impl.h  storage_controller_impl.cpp  storage_controller_impl.h  transport_subsystem_impl.cpp  transport_subsystem_impl.h
core/impl/data_collectors/: disk_space_collector.cpp  disk_space_collector.h  metrics_qulity_options.h
core/interfaces/: core.h  data_collector.h  event_controller.h  monitoring_subsystem.h  storage_controller.h  transport_subsystem.h
device_controller/: CMakeLists.txt  data_receiver.cpp  data_receiver.h  data_request_strings.h  device_controller_strings.h  wmi_controller.cpp  wmi_controller.h
internal_storage/: CMakeLists.txt  database_controller.cpp  database_controller.h  database_controller_io.cpp  database_io.h  sql_constants.h  sql_requests.h
internal_storage/options_io/: options.json  options_constants.h  options_io.cpp  options_io.h
tests/: CMakeLists.txt
tests/core_tests/: subsystem_run.cpp
tests/device_controller_tests/: wmi_controller_test.cpp
tests/event_queue_tests/: event_queue_test.cpp
tests/internal_storage/: options_io.cpp  storage_test.cpp
tests/windows_service_test/: CMakeLists.txt  win_service_test.cpp
transport_subsystem/: cmake installing script.txt
windows_service/: CMakeLists.txt  dir_helper.cpp  dir_helper.h  monitoring_agent.cpp  windows_service.cpp  windows_service.h
